Bug 1279467 - Fix null handling in RegExp character class with unicode flag. r=till